syntax = "proto3";

package snowcap.widget.v1;

import "google/protobuf/empty.proto";

message Padding {
  float top = 1;
  float right = 2;
  float bottom = 3;
  float left = 4;
}

enum Alignment {
  ALIGNMENT_UNSPECIFIED = 0;
  ALIGNMENT_START = 1;
  ALIGNMENT_CENTER = 2;
  ALIGNMENT_END = 3;
}

message Length {
  oneof strategy {
    google.protobuf.Empty fill = 1;
    uint32 fill_portion = 2;
    google.protobuf.Empty shrink = 3;
    float fixed = 4;
  }
}

message Color {
  float red = 1;
  float green = 2;
  float blue = 3;
  float alpha = 4;
}

message Gradient {
  message ColorStop {
    float offset = 1;
    Color color = 2;
  }

  message Linear {
    float radians = 1;
    repeated ColorStop stops = 2;
  }

  oneof gradient {
    Linear linear = 1;
  }
}

message Background {
  oneof background {
    Color color = 1;
    Gradient gradient = 2;
  }
}

message LineHeight {
  oneof line_height {
    float relative = 1;
    float absolute = 2;
  }
}

message Font {
  message Family {
    oneof family {
      string name = 1;
      google.protobuf.Empty serif = 2;
      google.protobuf.Empty sans_serif = 3;
      google.protobuf.Empty cursive = 4;
      google.protobuf.Empty fantasy = 5;
      google.protobuf.Empty monospace = 6;
    }
  }

  enum Weight {
    WEIGHT_UNSPECIFIED = 0;
    WEIGHT_THIN = 1;
    WEIGHT_EXTRA_LIGHT = 2;
    WEIGHT_LIGHT = 3;
    WEIGHT_NORMAL = 4;
    WEIGHT_MEDIUM = 5;
    WEIGHT_SEMIBOLD = 6;
    WEIGHT_BOLD = 7;
    WEIGHT_EXTRA_BOLD = 8;
    WEIGHT_BLACK = 9;
  }

  enum Stretch {
    STRETCH_UNSPECIFIED = 0;
    STRETCH_ULTRA_CONDENSED = 1;
    STRETCH_EXTRA_CONDENSED = 2;
    STRETCH_CONDENSED = 3;
    STRETCH_SEMI_CONDENSED = 4;
    STRETCH_NORMAL = 5;
    STRETCH_SEMI_EXPANDED = 6;
    STRETCH_EXPANDED = 7;
    STRETCH_EXTRA_EXPANDED = 8;
    STRETCH_ULTRA_EXPANDED = 9;
  }

  enum Style {
    STYLE_UNSPECIFIED = 0;
    STYLE_NORMAL = 1;
    STYLE_ITALIC = 2;
    STYLE_OBLIQUE = 3;
  }

  Family family = 1;
  Weight weight = 2;
  Stretch stretch = 3;
  Style style = 4;
}

message Radius {
  float top_left = 1;
  float top_right = 2;
  float bottom_right = 3;
  float bottom_left = 4;
}

message Border {
  optional Color color = 1;
  optional float width = 2;
  optional Radius radius = 3;
}

message Theme {
  optional Palette palette = 1;

  optional Text.Style text_style = 2;
  optional Scrollable.Style scrollable_style = 3;
  optional Container.Style container_style = 4;
  optional Button.Style button_style = 5;
}

message Palette {
  Color background = 1;
  Color text = 2;
  Color primary = 3;
  Color success = 4;
  Color warning = 5;
  Color danger = 6;
}

message WidgetDef {
  optional Theme theme = 1;

  oneof widget {
    Text text = 2;
    Column column = 3;
    Row row = 4;
    Scrollable scrollable = 5;
    Container container = 6;
    Button button = 7;
    Image image = 8;
    InputRegion input_region = 9;
    MouseArea mouse_area = 10;
    TextInput text_input = 11;
  }
}

message Text {
  string text = 1;
  optional Length width = 2;
  optional Length height = 3;
  optional Alignment horizontal_alignment = 4;
  optional Alignment vertical_alignment = 5;
  optional Style style = 6;

  message Style {
    optional Color color = 1;
    optional float pixels = 2;
    optional Font font = 3;
  }
}

message Column {
  optional float spacing = 1;
  optional Padding padding = 2;
  optional Alignment item_alignment = 3;
  optional Length width = 4;
  optional Length height = 5;
  optional float max_width = 6;
  optional bool clip = 7;
  repeated WidgetDef children = 8;
}

message Row {
  optional float spacing = 1;
  optional Padding padding = 2;
  optional Alignment item_alignment = 3;
  optional Length width = 4;
  optional Length height = 5;
  optional bool clip = 6;
  repeated WidgetDef children = 7;
}

message Scrollable {
  optional Length width = 1;
  optional Length height = 2;
  optional Direction direction = 3;
  WidgetDef child = 4;
  optional Style style = 5;

  message Style {
    optional Container.Style container_style = 1;
    optional Rail vertical_rail = 2;
    optional Rail horizontal_rail = 3;
  }

  message Rail {
    optional Color background_color = 1;
    optional Border border = 2;
    optional Color scroller_color = 3;
    optional Border scroller_border = 4;
  }

  message Direction {
    optional Scrollbar vertical = 1;
    optional Scrollbar horizontal = 2;
  }

  message Scrollbar {
    optional float width_pixels = 1;
    optional float margin_pixels = 2;
    optional float scroller_width_pixels = 3;
    // `true` to anchor the scrollbar to start at the end,
    // `false` for the default behavior
    optional bool anchor_to_end = 4;
    // Embeds the scrollbar into the scrollable with the
    // given spacing.
    optional float embed_spacing = 5;
  }
}

message Container {
  optional Padding padding = 1;
  optional Length width = 2;
  optional Length height = 3;
  optional float max_width = 4;
  optional float max_height = 5;
  optional Alignment horizontal_alignment = 6;
  optional Alignment vertical_alignment = 7;
  optional bool clip = 8;
  WidgetDef child = 9;
  optional Style style = 10;

  message Style {
    optional Color text_color = 1;
    optional Color background_color = 2; // TODO: gradient
    optional Border border = 3;
    // TODO: shadow
  }
}

message InputRegion {
  bool add = 1;
  optional Length width = 2;
  optional Length height = 3;
  WidgetDef child = 9;
}

message Button {
  WidgetDef child = 1;
  optional Length width = 2;
  optional Length height = 3;
  optional Padding padding = 4;
  optional bool clip = 5;
  optional Style style = 6;
  optional uint32 widget_id = 7;

  message Style {
    optional Inner active = 1;
    optional Inner hovered = 2;
    optional Inner pressed = 3;
    optional Inner disabled = 4;

    message Inner {
      optional Color text_color = 1;
      optional Color background_color = 2;
      optional Border border = 3;
      // TODO: shadow
    }
  }

  // A button was pressed.
  message Event {}
}

message Image {
  oneof handle {
    string path = 1;
    bytes bytes = 2;
    Rgba rgba = 3;
  }
  optional Length width = 4;
  optional Length height = 5;
  optional bool expand = 6;
  optional ContentFit content_fit = 7;
  optional bool nearest_neighbor = 8;
  optional float rotation_degrees = 9;
  optional float opacity = 10;
  optional float scale = 11;

  enum ContentFit {
    CONTENT_FIT_UNSPECIFIED = 0;
    CONTENT_FIT_CONTAIN = 1;
    CONTENT_FIT_COVER = 2;
    CONTENT_FIT_FILL = 3;
    CONTENT_FIT_NONE = 4;
    CONTENT_FIT_SCALE_DOWN = 5;
  }

  message Rgba {
    uint32 width = 1;
    uint32 height = 2;
    bytes rgba = 3;
  }
}

message MouseArea {
  WidgetDef child = 1;
  bool on_press = 2;
  bool on_release = 3;
  bool on_double_click = 4;
  bool on_right_press = 5;
  bool on_right_release = 6;
  bool on_middle_press = 7;
  bool on_middle_release = 8;
  bool on_scroll = 9;
  bool on_enter = 10;
  bool on_move = 11;
  bool on_exit = 12;
  optional Interaction interaction = 13;
  optional uint32 widget_id = 14;

  enum Interaction {
    INTERACTION_NONE = 0;
    INTERACTION_IDLE = 1;
    INTERACTION_POINTER = 2;
    INTERACTION_GRAB = 3;
    INTERACTION_TEXT = 4;
    INTERACTION_CROSSHAIR = 5;
    INTERACTION_GRABBING = 6;
    INTERACTION_RESIZE_HORIZONTAL = 7;
    INTERACTION_RESIZE_VERTICAL = 8;
    INTERACTION_RESIZE_DIAGONAL_UP = 9;
    INTERACTION_RESIZE_DIAGONAL_DOWN = 10;
    INTERACTION_NOT_ALLOWED = 11;
    INTERACTION_ZOOM_IN = 12;
    INTERACTION_ZOOM_OUT = 13;
    INTERACTION_CELL = 14;
    INTERACTION_MOVE = 15;
    INTERACTION_COPY = 16;
    INTERACTION_HELP = 17;
  }

  message Event {
    oneof data {
      google.protobuf.Empty press = 1;
      google.protobuf.Empty release = 2;
      google.protobuf.Empty double_click = 3;
      google.protobuf.Empty right_press = 4;
      google.protobuf.Empty right_release = 5;
      google.protobuf.Empty middle_press = 6;
      google.protobuf.Empty middle_release = 7;
      ScrollEvent scroll = 8;
      google.protobuf.Empty enter = 9;
      MoveEvent move = 10;
      google.protobuf.Empty exit = 11;
    }
  }

  message ScrollEvent {
    message Lines {
      float x = 1;
      float y = 2;
    }

    message Pixels {
      float x = 1;
      float y = 2;
    }

    oneof data {
      Lines lines = 1;
      Pixels pixels = 2;
    }
  }

  message MoveEvent {
    float x = 1;
    float y = 2;
  }
}

message TextInput {
  string placeholder = 1;
  string value = 2;
  optional string id = 3;
  bool secure = 4;
  bool on_input = 5;
  bool on_submit = 6;
  bool on_paste = 7;
  optional Font font = 8;
  optional Icon icon = 9;
  optional Length width = 10;
  optional Padding padding = 11;
  optional LineHeight line_height = 12;
  optional Alignment horizontal_alignment = 13;
  optional Style style = 14;
  optional uint32 widget_id = 19;

  message Icon {
    Font font = 1;
    uint32 code_point = 2;
    optional float pixels = 3;
    float spacing = 4;
    bool right_side = 5;
  }

  message Style {
    optional Inner active = 1;
    optional Inner hovered = 2;
    optional Inner focused = 3;
    optional Inner hover_focused = 4;
    optional Inner disabled = 5;

    message Inner {
      optional Background background = 1;
      optional Border border = 2;
      optional Color icon = 3;
      optional Color placeholder = 4;
      optional Color value = 5;
      optional Color selection = 6;
    }
  }

  message Event {
    oneof data {
      string input = 1;
      google.protobuf.Empty submit = 2;
      string paste = 3;
    }
  }
}

message GetWidgetEventsRequest {
  oneof id {
    uint32 layer_id = 1;
    uint32 decoration_id = 2;
  }
}

message WidgetEvent {
  uint32 widget_id = 1;

  oneof event {
    Button.Event button = 2;
    MouseArea.Event mouse_area = 3;
    TextInput.Event text_input = 4;
  }
}

message GetWidgetEventsResponse {
  repeated WidgetEvent widget_events = 1;
}

service WidgetService {
  rpc GetWidgetEvents(GetWidgetEventsRequest) returns (stream GetWidgetEventsResponse);
}
